--- a/farmset.html
+++ b/farmset.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Farm setting</title>
+    <title>Man Power Supply</title>
     <!-- MDB icon -->
     <!-- Font Awesome -->
 
@@ -128,7 +128,7 @@
 
   <div class="container">
     <div id="para1" class="services py-5">
-      <h1>Farm Setting</h1>
+      <h1>Man Power Supply</h1>
     </div>
     <div class="team" id="para3">
       <div class="row">
@@ -142,9 +142,9 @@
 
 
         <div class="col-sm-7 col-md-7">
-          <h3 id="para2">Farm Setting</h3>
-          <p id="para4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-            labore et dolore magna aliqua.</p>
+          <h3 id="para2">Man Power Supply</h3>
+          <p id="para4">Agrivator has a team of skilled workers to suit your manpower needs in the farm. Fill the following form with your requirements and contact number.
+          </p>
 
           <div class="desc">
             <h4 id="text m-1">Amt: $500</h4>
