--- a/growbags.html
+++ b/growbags.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Products</title>
+    <title>Growbags</title>
     <!-- MDB icon -->
     <!-- Font Awesome -->
 
@@ -17,7 +17,7 @@
     <!-- Material Design Bootstrap -->
     <link rel="stylesheet" href="css/mdb.min.css">
     <!-- Your custom styles (optional) -->
-    <link rel="stylesheet" href="css/product.css">
+    <link rel="stylesheet" href="css/growbag.css">
     <!-- <link rel="stylesheet" href="home.css"> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
@@ -81,7 +81,7 @@
     </section>
     <section id="head">
         <div class="row py-5">
-            <h1 class="mx-auto agri-head">Agricultural Products</h1>
+            <h1 class="mx-auto agri-head">Growbags</h1>
         </div>
     </section>
     <section id="product-section">
@@ -90,10 +90,10 @@
                 <div class="col-sm-5 mb-3 prod-card mx-auto shadow">
                     <div class="row">
                         <div class="col-sm-6 prod-detail ">
-                            <img class="prod-image" src="img/tomato.png">
+                            <img class="prod-image" src="img/gbag.png">
                         </div>
-                        <div class="col-sm-6 prod-detail">
-                            <h3>Tomato</h3>
+                        <div class="col-sm-6 prod-detail" style="color: #2f2e41;">
+                            <h3>Product-1</h3>
                             <p>
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit
                             </p>
@@ -101,13 +101,13 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-5 mb-3 prod-card mx-auto">
+                <div class="col-sm-5 mb-3 prod-card mx-auto shadow">
                     <div class="row">
                         <div class="col-sm-6 prod-detail ">
-                            <img class="prod-image" src="img/tomato.png">
+                            <img class="prod-image" src="img/gbag.png">
                         </div>
-                        <div class="col-sm-6 prod-detail">
-                            <h3>Tomato</h3>
+                        <div class="col-sm-6 prod-detail"  style="color: #2f2e41;">
+                            <h3>Product-2</h3>
                             <p>
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit
                             </p>
@@ -115,13 +115,13 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-5 mb-3 prod-card mx-auto">
+                <div class="col-sm-5 mb-3 prod-card mx-auto shadow">
                     <div class="row">
                         <div class="col-sm-6 prod-detail ">
-                            <img class="prod-image" src="img/tomato.png">
+                            <img class="prod-image" src="img/gbag.png">
                         </div>
-                        <div class="col-sm-6 prod-detail">
-                            <h3>Tomato</h3>
+                        <div class="col-sm-6 prod-detail"  style="color: #2f2e41;">
+                            <h3>Product-3</h3>
                             <p>
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit
                             </p>
@@ -129,14 +129,14 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-5 mb3 prod-card mx-auto">
+                <div class="col-sm-5 mb3 prod-card mx-auto shadow">
                     <div class="row">
                         <div class="col-sm-6 prod-detail ">
-                            <img class="prod-image" src="img/tomato.png">
+                            <img class="prod-image" src="img/gbag.png">
                         </div>
-                        <div class="col-sm-6 prod-detail">
-                            <h3>Tomato</h3>
-                            <p>
+                        <div class="col-sm-6 prod-detail" style="color: #2f2e41;">
+                            <h3>Product-4</h3>
+                            <p style="color: #2f2e41;">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit
                             </p>
                             <button class="btn success" style="background-color: #78b122;border-radius: 20px;">Add to cart</button>
