--- a/product.html
+++ b/product.html
@@ -31,11 +31,10 @@
       <div class="container">
         <a class="navbar-brand" href="index.html">
           <div>
-            <img  class="logo" src="img/Logo with Side Text - White.png"></div>
+            <img class="logo" src="img/Logo with Side Text - White.png"></div>
         </a>
-        <button class="navbar-toggler"  type="button" data-toggle="collapse"
-          data-target="#navbarSupportedContent-4" aria-controls="navbarSupportedContent-4" aria-expanded="false"
-          aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-4"
+          aria-controls="navbarSupportedContent-4" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent-4">
@@ -80,7 +79,7 @@
     <div class="row no-gutters section-title mt-5">
       <div class="air-desc col-sm-5 mx-auto" style="height: auto;">
         <p class="air-description row" style="color: #2f2e41;height: auto;">
-         <center><span class=" air-head " style="margin: 0 auto;">AGRICULTURAL PRODUCTS</span></center>
+          <center><span class=" air-head " style="margin: 0 auto;">AGRICULTURAL PRODUCTS</span></center>
         </p>
       </div>
       <div class="air-image col-sm-5 mx-auto ">
@@ -88,19 +87,17 @@
       </div>
     </div>
     <div class="section-description m-5 col-sm-8 mx-auto ">
-      <p class="mx-auto">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore
-        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo
-        consequat
+      <p class="mx-auto" style="text-align:justify;font-weight: 300;">
+        Agrivator provides fresh and safe to eat vegetables and fruits from 'farm to fork'. The produce is sourced from
+        clusters of farms under Agrivator across Kerala.
       </p>
     </div>
     <div class="section-button mx-auto">
       <p class="text-center">
         <a href="agri-product.html">
-        <button type="button" class="btn section-button" style="background-color: #78b122;border-radius: 50px;color: #2f2e41;">More Products</button>
-      </a>
+          <button type="button" class="btn section-button"
+            style="background-color: #78b122;border-radius: 50px;color: #2f2e41;">More Products</button>
+        </a>
       </p>
     </div>
     <hr class="mt-3 mb-3">
@@ -119,20 +116,20 @@
         <center><img class="air-image img-fluid" src="img/air.jpg"></center>
       </div>
     </div>
-    <div class="section-description m-5 col-sm-6 mx-auto ">
-      <p class="mx-auto">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore
-        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo
-        consequat
+    <div class="section-description m-5 col-sm-8 mx-auto ">
+      <p class="mx-auto" style="text-align:justify;font-weight: 300;">
+        Agrivator uses fully automated Aeroponic systems in our Airfarms to grow crops efficiently. It is a soil less
+        method of cultivation where plant roots are suspended in the air and nutrients are directly sprayed by a pump at
+        regular intervals. Also this portable system, where a single tower can hold upto 32 plants requires only limited
+        space & could easily be set up in your home and Agrivator would do it for you.
       </p>
     </div>
     <div class="section-button mx-auto">
       <p class="text-center">
         <a href="air.html">
-        <button type="button" class="btn section-button" style="background-color: #78b122;border-radius: 50px;color: #2f2e41;">More Products</button>
-      </a>
+          <button type="button" class="btn section-button"
+            style="background-color: #78b122;border-radius: 50px;color: #2f2e41;">More Products</button>
+        </a>
       </p>
     </div>
     <hr class="mt-3 mb-3">
@@ -148,20 +145,24 @@
         <center><img class="air-image img-fluid" src="img/Grow_Bag.png"></center>
       </div>
     </div>
-    <div class="section-description m-5 col-sm-6 mx-auto ">
-      <p class="mx-auto">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore
-        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo
-        consequat
+    <div class="section-description m-5 col-sm-8 mx-auto ">
+      <p class="mx-auto" style="text-align:justify;font-weight: 300;">
+        If you are not so keen on employing soil-less farming in the beginning, you could always start with our big and
+        strong grow bags. In regular pots, the roots of the plants tend to grow in circles entangling themselves. This
+        leads to oxygenation or water stagnation issues. The roots become constricted leading to less water and nutrient
+        intake. Grow bags help to alleviate this issue because as the roots come in contact with the edges of the fabric
+        pot they sense the drier soil that is exposed to the air. This prevents over growth of roots eliminating
+        girdling roots. A more fibrous root system allows the plants to take in more nutrients and water. Grow bags
+        regulate temperature due to their breathable quality. Excess heat is able to escape from all sides of the grow
+        bag. The other advantages include easy storage and versatility.
       </p>
     </div>
     <div class="section-button mx-auto">
       <p class="text-center">
         <a href="growbags.html">
-        <button type="button" class="btn section-button" style="background-color: #78b122;border-radius: 50px;color: #2f2e41;">More Products</button>
-      </a>
+          <button type="button" class="btn section-button"
+            style="background-color: #78b122;border-radius: 50px;color: #2f2e41;">More Products</button>
+        </a>
       </p>
     </div>
   </section>
@@ -170,13 +171,14 @@
     <div class="footer mb-5" style="position: relative; top: 50px; width: 100%;">
       <footer class="text-center">
         <a class="up-arrow" href="#nav-1" data-toggle="tooltip" title="TO TOP">
-          <i class="fas fa-angle-up"></i>      </a><br><br>
+          <i class="fas fa-angle-up"></i> </a><br><br>
         <p> <a href="team.html" data-toggle="tooltip" title="Visit team page">Team</a></p>
         <p><a href="product.html" data-toggle="tooltip" title="Visit products page">Products </a></p>
         <p><a href="services.html" data-toggle="tooltip" title="Visit services page">Services </a></p>
         <p> <a href="vision.html" data-toggle="tooltip" title="Visit vision page">Vision</a></p>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  
+        <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
         <!-- Social buttons -->
         <ul class="list-unstyled list-inline text-center">
           <li class="list-inline-item">
@@ -208,7 +210,7 @@
         <!-- Social buttons -->
       </footer>
     </div>
-    </section>
+  </section>
   <!-- End your project here-->
   <!-- Development version -->
   <!-- <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.js"></script> -->
@@ -217,7 +219,7 @@
   <!-- <script src="https://unpkg.com/@popperjs/core@2"></script> -->
   <!-- jQuery -->
   <script>
-  
+
   </script>
 
   <script type="text/javascript" src="js/jquery.min.js"></script>
