--- a/services.html
+++ b/services.html
@@ -21,7 +21,7 @@
   <!-- Your custom styles (optional) -->
   <link rel="stylesheet" href="css/servicestyle.css">
   <link rel="stylesheet" href="css/product.css">
-  
+
 </head>
 
 <body style="overflow: hidden;">
@@ -33,7 +33,7 @@
       <div class="container">
         <a class="navbar-brand" href="index.html">
           <div>
-            <img  class="logo" src="img/Logo with Side Text - White.png"></div>
+            <img class="logo" src="img/Logo with Side Text - White.png"></div>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-4"
           aria-controls="navbarSupportedContent-4" aria-expanded="false" aria-label="Toggle navigation">
@@ -148,12 +148,13 @@
         <div class="card-body">
 
           <!--Title-->
-          <h4 class="card-title" style="color: #2f2e41;">Farm setting</h4>
+          <h4 class="card-title" style="color: #2f2e41;">Manpower supply</h4>
           <!--Text-->
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
+          <p class="card-text"> Agrivator has a team of skilled workers to suit your manpower needs in the farm. Fill
+            the following form with your requirements and contact number.</p>
           <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
-          <a href="farmset.html"><button type="button" class="btn  buttonprop" style="background-color: #78b122;color: #2f2e41;">More</button></a>
+          <a href="farmset.html"><button type="button" class="btn  buttonprop"
+              style="background-color: #78b122;color: #2f2e41;">More</button></a>
 
         </div>
 
@@ -175,12 +176,15 @@
         <div class="card-body">
 
           <!--Title-->
-          <h4 class="card-title" style="color: #2f2e41;">Farm planning</h4>
+          <h4 class="card-title" style="color: #2f2e41;">Garden Setting</h4>
           <!--Text-->
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
+          <p class="card-text">Dig into your new gardening adventure with Agrivator. We can help you in deciding what to
+            plant, improve and work the soil, help set up and maintain your garden(preferably a vegetable garden). Only
+            two or three months after planting, you’ll be picking as much delicious produce as you can eat. There is no
+            other variations of gardening as rewading as a vegetable garden.</p>
           <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
-          <a href="farmplan.html"><button type="button" class="btn  buttonprop" style="background-color: #78b122;color: #2f2e41;">More</button></a>
+          <a href="farmplan.html"><button type="button" class="btn  buttonprop"
+              style="background-color: #78b122;color: #2f2e41;">More</button></a>
 
         </div>
 
@@ -202,14 +206,16 @@
         <div class="card-body">
 
           <!--Title-->
-          <h4 class="card-title" style="color: #2f2e41;">Green hut</h4>
+          <h4 class="card-title" style="color: #2f2e41;">Fresh Produce delivery</h4>
           <!--Text-->
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
+          <p class="card-text"> We will be partnering with DART Delivery app, to deliver fresh fruits and vegetables
+            from our farms. At present, the service is only available in Kollam district. We will soon be expanding into
+            other districts as well.</p>
           <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
-          <a href="greenhut.html"><button type="button" class="btn  buttonprop" style="background-color: #78b122;color: #2f2e41;">More</button></a>
+          <a href="greenhut.html"><button type="button" class="btn  buttonprop"
+              style="background-color: #78b122;color: #2f2e41;">More</button></a>
 
-        </div>home
+        </div>
 
       </div>
       <!-- Card -->
