--- a/greenhut.html
+++ b/greenhut.html
@@ -2,33 +2,34 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Green Hut</title>
-    <!-- MDB icon -->
-    <!-- Font Awesome -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <title>Fresh Produce delivery</title>
+  <!-- MDB icon -->
+  <!-- Font Awesome -->
 
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
-    <!-- Google Fonts Roboto -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
-    <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <!-- Material Design Bootstrap -->
-    <link rel="stylesheet" href="css/mdb.min.css">
-    <!-- Your custom styles (optional) -->
-    <link rel="stylesheet" href="css/product.css">
-    <!-- <link rel="stylesheet" href="home.css"> -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
+  <!-- Google Fonts Roboto -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+  <!-- Bootstrap core CSS -->
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <!-- Material Design Bootstrap -->
+  <link rel="stylesheet" href="css/mdb.min.css">
+  <!-- Your custom styles (optional) -->
+  <link rel="stylesheet" href="css/product.css">
+  <!-- <link rel="stylesheet" href="home.css"> -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
   <style>
     @media (max-width: 500px) {
-   .req-form{
-     padding-top: 20%;
-   }
-  }
+      .req-form {
+        padding-top: 20%;
+      }
+    }
+
     #para1 {
       text-align: center;
       margin-bottom: 5%;
@@ -82,9 +83,8 @@
             <img class="logo" src="img/Logo with Side Text - White.png">
           </div>
         </a>
-        <button class="navbar-toggler"  type="button" data-toggle="collapse"
-          data-target="#navbarSupportedContent-4" aria-controls="navbarSupportedContent-4" aria-expanded="false"
-          aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-4"
+          aria-controls="navbarSupportedContent-4" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent-4">
@@ -129,7 +129,7 @@
 
   <div class="py-5 container">
     <div id="para1" class="services">
-      <h1>Green Hut</h1>
+      <h1>Fresh Produce delivery</h1>
     </div>
     <div class="team" id="para3">
       <div class="row">
@@ -143,15 +143,16 @@
 
 
         <div class="col-sm-7 col-md-7 ">
-          <h3 id="para2">Green Hut</h3>
-          <p id="para4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-            labore et dolore magna aliqua.</p>
+          <h3 id="para2">Fresh Produce delivery</h3>
+          <p id="para4">We will be partnering with DART Delivery app, to deliver fresh fruits and vegetables from our
+            farms. At present, the service is only available in Kollam district. We will soon be expanding into other
+            districts as well.</p>
 
           <div class="desc">
             <h4 id="text m-1">Amt: $500</h4>
           </div>
-          <div class="modal req-form fade mx-auto" id="modalContactForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-            aria-hidden="true" style="margin: 8%;">
+          <div class="modal req-form fade mx-auto" id="modalContactForm" tabindex="-1" role="dialog"
+            aria-labelledby="myModalLabel" aria-hidden="true" style="margin: 8%;">
             <div class="modal-dialog" role="document">
               <div class="modal-content">
                 <div class="modal-header text-center">
@@ -194,9 +195,9 @@
           </div>
 
           <div class="text-center">
-            <a href="" class="btn  btn-rounded mb-4" data-toggle="modal" 
-              data-target="#modalContactForm" style="background-color: #78b122;">Need this service</a>
-              <a href="services.html" class=" btn  btn-rounded mb-4"  style="background-color: #78b122;">Go Back</a>
+            <a href="" class="btn  btn-rounded mb-4" data-toggle="modal" data-target="#modalContactForm"
+              style="background-color: #78b122;">Need this service</a>
+            <a href="services.html" class=" btn  btn-rounded mb-4" style="background-color: #78b122;">Go Back</a>
           </div>
 
         </div>
@@ -209,13 +210,14 @@
     <div class="footer mb-5" style="position: relative; top: 50px; width: 100%;">
       <footer class="text-center">
         <a class="up-arrow" href="#nav-1" data-toggle="tooltip" title="TO TOP">
-          <i class="fas fa-angle-up"></i>      </a><br><br>
+          <i class="fas fa-angle-up"></i> </a><br><br>
         <p> <a href="team.html" data-toggle="tooltip" title="Visit team page">Team</a></p>
         <p><a href="product.html" data-toggle="tooltip" title="Visit products page">Products </a></p>
         <p><a href="services.html" data-toggle="tooltip" title="Visit services page">Services </a></p>
         <p> <a href="vision.html" data-toggle="tooltip" title="Visit vision page">Vision</a></p>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  
+        <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
         <!-- Social buttons -->
         <ul class="list-unstyled list-inline text-center">
           <li class="list-inline-item">
@@ -247,22 +249,22 @@
         <!-- Social buttons -->
       </footer>
     </div>
-    </section>
-    <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.js"></script>
+  </section>
+  <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.js"></script>
 
-    <!-- Production version -->
-    <script src="https://unpkg.com/@popperjs/core@2"></script>
-    <!-- jQuery -->
-    <script type="text/javascript" src="js/jquery.min.js"></script>
-    <!-- Bootstrap tooltips -->
-    <script type="text/javascript" src="js/popper.js"></script>
-    <script type="text/javascript" src="js/popper.min.js"></script>
-    <!-- Bootstrap core JavaScript -->
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
-    <!-- MDB core JavaScript -->
-    <script type="text/javascript" src="js/mdb.min.js"></script>
-    <!-- Your custom scripts (optional) -->
-    <script type="text/javascript"></script>
+  <!-- Production version -->
+  <script src="https://unpkg.com/@popperjs/core@2"></script>
+  <!-- jQuery -->
+  <script type="text/javascript" src="js/jquery.min.js"></script>
+  <!-- Bootstrap tooltips -->
+  <script type="text/javascript" src="js/popper.js"></script>
+  <script type="text/javascript" src="js/popper.min.js"></script>
+  <!-- Bootstrap core JavaScript -->
+  <script type="text/javascript" src="js/bootstrap.min.js"></script>
+  <!-- MDB core JavaScript -->
+  <script type="text/javascript" src="js/mdb.min.js"></script>
+  <!-- Your custom scripts (optional) -->
+  <script type="text/javascript"></script>
 </body>
 
 </html>
