--- a/team.html
+++ b/team.html
@@ -1,36 +1,36 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Team</title>
-  <!-- MDB icon -->
-  <!-- <link rel="icon" href="img/mdb-favicon.ico" type="image/x-icon"> -->
-  <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
-  <!-- Google Fonts Roboto -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>Team</title>
+    <!-- MDB icon -->
+    <!-- <link rel="icon" href="img/mdb-favicon.ico" type="image/x-icon"> -->
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
+    <!-- Google Fonts Roboto -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
-  <!-- Bootstrap core CSS -->
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <!-- Material Design Bootstrap -->
-  <link rel="stylesheet" href="css/mdb.min.css">
-  <!-- Your custom styles (optional) -->
-  <link rel="stylesheet" href="style.css" type="text/css">
-  <link rel="stylesheet" href="css/product.css" type="text/css">
+    <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <!-- Material Design Bootstrap -->
+    <link rel="stylesheet" href="css/mdb.min.css">
+    <!-- Your custom styles (optional) -->
+    <!-- <link rel="stylesheet" href="style.css" type="text/css"> -->
+    <link rel="stylesheet" href="css/product.css" type="text/css">
 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 </head>
-<body>
+
+<body style="height: 100vh;">
     <section id="nav-1" class="row">
         <!--Navbar -->
-        <nav class="navbar navbar-1 navbar-expand-lg navbar-light fixed-top " style="border: none;" >
+        <nav class="navbar navbar-1 navbar-expand-lg navbar-light fixed-top " style="border: none;">
             <div class="container">
                 <a class="navbar-brand" href="home.html">
                     <div>
@@ -80,119 +80,148 @@
         </nav>
         <!--/.Navbar -->
     </section>
-    <section class="team row">
-        <div class="container">
-            <div class="head py-5">
-                <h1>Our Team</h1>
-            </div>
-            <div class="row">
-                <div class="card col-sm hoverable hover border-0">
-                    <div class="box">
-                        <img src="img/ba1.jpg" alt="team img" />
-                        <h4>SARATH S</h4>
-                        <h5>CEO</h5>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-                            been
-                            the industry's since the 1500s, when an unknown printer took a galley of type and scrambled
-                            it
-                            to make a type specimen book.
-                        </p>
-                    </div>
-                </div>
-                <div class="card col-sm border-0">
-                    <div class="box">
-                        <img src="img/ba2.jpg" alt="team img" />
-                        <h4>IRENE TENISON</h4>
-                        <h5>CTO</h5>
-                        <p>It is a long established fact that a reader will be distracted by the readable content of a
-                            page
-                            when looking at its layout.
-                            The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,
-                            as
-                            opposed to using 'Content here, content here', making it look like readable English.
-                        </p>
-                    </div>
-                </div>
-                <div class="card col-sm border-0">
-                    <div class="box">
-                        <img src="img/ba3.jpg" alt="team img" />
-                        <h4>CEDRIC JACKSON</h4>
-                        <h5>CFO</h5>
-                        <p>Many desktop publishing packages and web page editors now use Lorem Ipsum as their default
-                            model
-                            text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.
-                            Various versions have evolved over the years, sometimes by accident, sometimes o
-                        </p>
-                    </div>
-                </div>
-                <div class="card col-sm border-0">
-                    <div class="box">
-                        <img src="img/ba4.jpg" alt="team img" />
-                        <h4>ARUN S KUMAR</h4>
-                        <h5>COO</h5>
-                        <p> It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
-                            passages, and more recently with desktop publishing software like Aldus PageMaker including
-                            versions of Lorem Ipsum.
-                            Why do we use it?
-                        </p>
-                    </div>
-                </div>
-            </div>
+    <section class="container mb-5" style="margin-top:80px">
+        <div class="row">
+            <p class="display-4 text-center my-5 mx-auto">Our Team</p>
+        </div>
+        <div class="row">
+            <!-- Card -->
+<div class="col-sm-3">
+
+    <div class="view overlay z-depth-2 rounded">
+      <img class="img-fluid w-100" src="img/ba1.jpg"
+        alt="Sample">
+      <a href="#!">
+        <div class="mask rgba-white-slight"></div>
+      </a>
+    </div>
+  
+    <div class="text-center pt-4">
+  
+      <h5>Fantasy T-shirt</h5>
+      <p class="small text-muted text-uppercase mb-2">Shirts</p>
+  
+    </div>
+  
+  </div>
+  <!-- Card -->
+  <!-- Card -->
+<div class="col-sm-3">
+
+    <div class="view overlay z-depth-2 rounded">
+      <img class="img-fluid w-100" src="img/ba2.jpg"
+        alt="Sample">
+      <a href="#!">
+        <div class="mask rgba-white-slight"></div>
+      </a>
+    </div>
+  
+    <div class="text-center pt-4">
+  
+      <h5>Fantasy T-shirt</h5>
+      <p class="small text-muted text-uppercase mb-2">Shirts</p>
+  
+    </div>
+  
+  </div>
+  <!-- Card -->
+  <!-- Card -->
+<div class="col-sm-3">
+
+    <div class="view overlay z-depth-2 rounded">
+      <img class="img-fluid w-100" src="img/ba3.jpg"
+        alt="Sample">
+      <a href="#!">
+        <div class="mask rgba-white-slight"></div>
+      </a>
+    </div>
+  
+    <div class="text-center pt-4">
+  
+      <h5>Fantasy T-shirt</h5>
+      <p class="small text-muted text-uppercase mb-2">Shirts</p>
+  
+    </div>
+  
+  </div>
+  <!-- Card -->
+  <!-- Card -->
+<div class="col-sm-3">
+
+    <div class="view overlay z-depth-2 rounded">
+      <img class="img-fluid w-100" src="img/ba4.jpg"
+        alt="Sample">
+      <a href="#!">
+        <div class="mask rgba-white-slight"></div>
+      </a>
+    </div>
+  
+    <div class="text-center pt-4">
+  
+      <h5>Fantasy T-shirt</h5>
+      <p class="small text-muted text-uppercase mb-2">Shirts</p>
+  
+    </div>
+  
+  </div>
+  <!-- Card -->
         </div>
     </section>
-<section class="row" style="overflow: hidden;">
-  <div class="footer" style="position: relative; top:50px; width: 100%;">
-    <footer class="text-center">
-      <a class="up-arrow" href="#nav-1" data-toggle="tooltip" title="TO TOP">
-        <i class="fas fa-angle-up"></i>      </a><br><br>
-      <p> <a href="team.html" data-toggle="tooltip" title="Visit team page">Team</a></p>
-      <p><a href="product.html" data-toggle="tooltip" title="Visit products page">Products </a></p>
-      <p><a href="services.html" data-toggle="tooltip" title="Visit services page">Services </a></p>
-      <p> <a href="vision.html" data-toggle="tooltip" title="Visit vision page">Vision</a></p>
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <section class="row " style="overflow: hidden;">
+        <div class="footer mb-5 mt-1" style="position: relative; top:50px; width: 100%;">
+            <footer class="text-center">
+                <a class="up-arrow" href="#nav-1" data-toggle="tooltip" title="TO TOP">
+                    <i class="fas fa-angle-up"></i> </a><br><br>
+                <p> <a href="team.html" data-toggle="tooltip" title="Visit team page">Team</a></p>
+                <p><a href="product.html" data-toggle="tooltip" title="Visit products page">Products </a></p>
+                <p><a href="services.html" data-toggle="tooltip" title="Visit services page">Services </a></p>
+                <p> <a href="vision.html" data-toggle="tooltip" title="Visit vision page">Vision</a></p>
+                <link rel="stylesheet"
+                    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-      <!-- Social buttons -->
-      <ul class="list-unstyled list-inline text-center">
-        <li class="list-inline-item">
-          <a class="btn-floating btn-fb mx-1">
-            <i class="fab fa-facebook-f"> </i>
-          </a>
-        </li>
-        <li class="list-inline-item">
-          <a class="btn-floating btn-tw mx-1">
-            <i class="fab fa-twitter"> </i>
-          </a>
-        </li>
-        <li class="list-inline-item">
-          <a class="btn-floating btn-gplus mx-1">
-            <i class="fab fa-google-plus-g"> </i>
-          </a>
-        </li>
-        <li class="list-inline-item">
-          <a class="btn-floating btn-li mx-1">
-            <i class="fab fa-linkedin-in"> </i>
-          </a>
-        </li>
-        <li class="list-inline-item">
-          <a class="btn-floating btn-dribbble mx-1">
-            <i class="fab fa-dribbble"> </i>
-          </a>
-        </li>
-      </ul>
-      <!-- Social buttons -->
-    </footer>
-  </div>
-</section>
+                <!-- Social buttons -->
+                <ul class="list-unstyled list-inline text-center">
+                    <li class="list-inline-item">
+                        <a class="btn-floating btn-fb mx-1">
+                            <i class="fab fa-facebook-f"> </i>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a class="btn-floating btn-tw mx-1">
+                            <i class="fab fa-twitter"> </i>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a class="btn-floating btn-gplus mx-1">
+                            <i class="fab fa-google-plus-g"> </i>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a class="btn-floating btn-li mx-1">
+                            <i class="fab fa-linkedin-in"> </i>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a class="btn-floating btn-dribbble mx-1">
+                            <i class="fab fa-dribbble"> </i>
+                        </a>
+                    </li>
+                </ul>
+                <!-- Social buttons -->
+            </footer>
+        </div>
+    </section>
 </body>
 
-  <!-- jQuery -->
-  <script type="text/javascript" src="js/jquery.min.js"></script>
-  <!-- Bootstrap tooltips -->
-  <script type="text/javascript" src="js/popper.min.js"></script>
-  <!-- Bootstrap core JavaScript -->
-  <script type="text/javascript" src="js/bootstrap.min.js"></script>
-  <!-- MDB core JavaScript -->
-  <script type="text/javascript" src="js/mdb.min.js"></script>
-  <!-- Your custom scripts (optional) -->
-  <script type="text/javascript"></script>
+<!-- jQuery -->
+<script type="text/javascript" src="js/jquery.min.js"></script>
+<!-- Bootstrap tooltips -->
+<script type="text/javascript" src="js/popper.min.js"></script>
+<!-- Bootstrap core JavaScript -->
+<script type="text/javascript" src="js/bootstrap.min.js"></script>
+<!-- MDB core JavaScript -->
+<script type="text/javascript" src="js/mdb.min.js"></script>
+<!-- Your custom scripts (optional) -->
+<script type="text/javascript"></script>
+
 </html>
