--- a/vision.html
+++ b/vision.html
@@ -20,9 +20,10 @@
   <link rel="stylesheet" href="css/mdb.min.css">
   <!-- Your custom styles (optional) -->
   <link rel="stylesheet" href="styleab.css">
+  <link rel="stylesheet" href="css/product.css">
 </head>
 
-<body>
+<body style="overflow: hidden;">
 
   <!-- Start your project here-->
   <!--Navbar -->
@@ -31,7 +32,7 @@
       <div class="container">
         <a class="navbar-brand" href="index.html">
           <div class="logo">
-            <img src="img/Logo with Side Text - White.png" style="width: 180px;"></div>
+            <img class="logo" src="img/Logo with Side Text - White.png" style="width: 180px;"></div>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-4"
           aria-controls="navbarSupportedContent-4" aria-expanded="false" aria-label="Toggle navigation">
@@ -74,27 +75,29 @@
       </div>
     </nav>
   </section>
-<section class="container">
+  <section class="container">
     <div class="row">
-        <h1 class="title display-4 mt-3 mx-auto">Vision</h1>
+      <h1 class="title display-4 mt-3 mx-auto">Vision</h1>
     </div>
     <div class="row">
-        <div class="left col m-1 mb-5 mx-auto mt-sm-3">
-            <p class="text-center h4-responsive flex-center" style="font-weight: 400;margin-top: auto;margin-bottom: auto;">Ambitioni dedisse scripsisse iudicaretur. Cras mattis iudicium purus sit amet
-                fermentum. Donec sed odio operae,
-                eu vulputate felis rhoncus.Donec sed odio operae,
-                eu vulputate felis rhoncus.Donec sed odio operae,
-                eu vulputate felis rhoncus. </p>
-        </div>
-        <div class="col right m-1 mx-auto mt-sm-3">
-            <img src="img/field2.jpg" class=" img-fluid" alt="Responsive image">
-        </div>
+      <div class="left col m-1 mt-3 mb-5 mx-auto mt-sm-3">
+        <p class=" h4-responsive" style="font-weight: 400;margin-top: auto;margin-bottom: auto;text-align: justify;padding: 10px;">
+          We endeavour to infuse technology with agriculture to bring out a revolutionary change through product
+          development which can ramp up crop growth and harvest with minimal resources and capital . We want society to
+          dine with quality produce rich in nutrients and get rid of pesticides and other life threatening chemicals
+          that we get to tuck-in today. We also make it a goal to boost the income of our farmer community and make sure
+          they get their deserved remuneration.
+        </p>
+      </div>
+      <div class="col right m-1 mx-auto mt-sm-5">
+        <img src="img/field2.jpg" class="mt-sm-5 img-fluid" alt="Responsive image">
+      </div>
     </div>
-</section>
-  <div class="footer" style="position: relative; top: 50px; width: 100%;">
+  </section>
+  <div class="footer mb-3" style="position: relative; top: 50px; width: 100%;">
     <footer class="text-center">
       <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
-        <i class="fas fa-angle-up"></i>      </a><br><br>
+        <i class="fas fa-angle-up"></i> </a><br><br>
       <p> <a href="team.html" data-toggle="tooltip" title="Visit team page">Team</a></p>
       <p><a href="product.html" data-toggle="tooltip" title="Visit products page">Products </a></p>
       <p><a href="services.html" data-toggle="tooltip" title="Visit services page">Services </a></p>
