--- a/air.html
+++ b/air.html
@@ -24,7 +24,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 
-<body>
+<body >
 
     <!-- Start your project here-->
     <section id="nav-1" class="mb-3">
@@ -80,32 +80,28 @@
     </section>
     <section id="head" class="mb-5">
         <div class="row py-5">
-            <h1 class="mx-auto py-5">Airfarms</h1>
         </div>
         <div class="container">
             <div class="row">
                 <!--Start Welcome Image-->
                 <div class="col-sm-6">
-                    <div class="welcome-img flex-center">
-                        <img src="img/air2.png" class="img-responsive" alt="Image">
+                    <div class="">
+                       <center><img src="img/air2.png" class="mx-auto welcome-img5  img-responsive" alt="Image"></center>
                     </div>
                 </div>
                 <!--End Welcome Image-->
 
                 <!--Start Welcome Content-->
-                <div class="col-sm-6 air-pdt mb-5">
-                    <div class="air-prod" style="margin-top: auto;">
-                        <h2 class="text-center mb-3">Agrivator Air farm</h2>
-                        <p> Agrivator air farm uses Aeroponics technique to grow plants inside it. The roots of the
+                <div class="col-sm-6 air-pdt">
+                    <div class="air-prod" style="margin-top: auto;font-size: 20px;">
+                        <h2 class="text-center air-heading mb-sm-3 ">Agrivator Air farm</h2>
+                        <p class="mt-5"> Agrivator air farm uses Aeroponics technique to grow plants inside it. The roots of the
                             plants are suspended in air. Water containing nutrients for the plant is supplied to the
                             roots with the help of a pump. The growth of the plants are accelerated due to the nutrients
                             directly reaching the roots. This system can be installed on terrace, kitchen garden balcony
                             or even in door. Various types of plants can be grown in this system. A single tower can
                             hold 32 plants. The cost of one unit is 7500 Rs which includes installation and all the
-                            accessories required for the plant growth.<br>A Completely automated aeroponics system which
-                            could easily fit in any balcony or kitchen garden, Agrivator Air Farms removes the hastle of
-                            gardening. Upto 32 plants can be grown in a single unit which makes the utilisation of space
-                            to the optimum.</p>
+                            accessories required for the plant growth.</p>
                         <!-- <a href="#" class="mx-auto">
                             <button type="button" class="btn section-button1"
                                 style="background-color: #78b122;border-radius: 50px;">Buy Now</button>
@@ -116,29 +112,29 @@
 
                 <!--End Welcome Content-->
             </div>
-            <div class="row mt-5" >
+            <div class="row mt-sm-5" >
                 <!--Start Welcome Image-->
                
                 <!--End Welcome Image-->
 
                 <!--Start Welcome Content-->
-                <div class="col-sm-6 air-pdt">
-                    <div class="air-prod mx-auto]" style="margin-top: auto;">
-                        <h2 class="text-center mb-3">Aeroponics</h2>
+                <div class="col-sm-6 air-prod air-pdt">
+                    <div class=" mx-auto p-sm-5 p-3 z-depth-1-half" style="margin-top: auto;font-size: 20px;">
                         <p>Agrivator air farm uses Aeroponics technique to grow plants inside it. The roots of the
                             plants are suspended in air. Water containing nutrients for the plant is supplied to the
                             roots with the help of a pump. The growth of the plants are accelerated due to the nutrients
-                            directly reaching the roots.</p>
+                            directly reaching the roots.<br>A Completely automated aeroponics system which
+                            could easily fit in any balcony or kitchen garden, Agrivator Air Farms removes the hastle of
+                            gardening. Upto 32 plants can be grown in a single unit which makes the utilisation of space
+                            to the optimum.</p>
                         <a href="#" class="mx-auto">
-                            <button type="button" class="btn section-button1"
-                                style="background-color: #78b122;border-radius: 50px;">Buy Now</button>
                         </a>
                     </div>
 
                 </div>
-                <div class="col-sm-5">
-                    <div class="ml-3 flex-center">
-                        <img class="welcome-img2" src="img/Aerospring+Products.png" class="img-responsive" alt="Image">
+                <div class="col-sm-5 mx-auto">
+                    <div class="ml-3">
+                        <center><img class="welcome-img2" src="img/Aerospring+Products.png" class="img-responsive" alt="Image"></center>
                     </div>
                 </div>
                 <!--End Welcome Content-->
