--- a/product.html
+++ b/product.html
@@ -18,11 +18,13 @@
   <link rel="stylesheet" href="css/mdb.min.css">
   <!-- Your custom styles (optional) -->
   <link rel="stylesheet" href="css/product.css">
+  <link rel="stylesheet" href="css/main.css">
   <!-- <link rel="stylesheet" href="home.css"> -->
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+  <link href="//db.onlinewebfonts.com/c/1c45e28f8e86cc89876f003b953cc3e9?family=SF+Pro+Text" rel="stylesheet" type="text/css"/>
 </head>
 
-<body style="overflow: hidden;">
+<body style="overflow: hidden;font-family: -apple-system, BlinkMacSystemFont, sans-serif;">
 
   <!-- Start your project here-->
   <section id="nav-1">
