--- a/team.html
+++ b/team.html
@@ -32,15 +32,15 @@
         <!--Navbar -->
         <nav class="navbar navbar-1 navbar-expand-lg navbar-light fixed-top " style="border: none;">
             <div class="container">
-                <a class="navbar-brand" href="home.html">
-                    <div>
+                <a class="navbar-brand" href="index.html">
+                    <div class="logo">
                         <img class="logo" src="img/Logo with Side Text - White.png">
                     </div>
                 </a>
-                <button class="navbar-toggler" style="background-color: white;" type="button" data-toggle="collapse"
+                <button class="navbar-toggler"  type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent-4" aria-controls="navbarSupportedContent-4"
-                    aria-expanded="false" aria-label="Toggle navigation" style="border: none;">
-                    <span class="navbar-toggler-icon "></span>
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent-4">
                     <ul class="navbar-nav ml-auto nav-items">
@@ -65,7 +65,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link m-1" href="home.html" style="color: #78b122;font-weight: 500;">
+                            <a class="nav-link m-1" href="index.html" style="color: #78b122;font-weight: 500;">
                                 <p class="m-1">CONTACT</p>
                             </a>
                         </li>
@@ -82,89 +82,85 @@
     </section>
     <section class="container mb-5" style="margin-top:80px">
         <div class="row">
-            <p class="display-4 text-center my-5 mx-auto">Our Team</p>
+            <p class="team-head text-center my-5 mx-auto">Our Team</p>
         </div>
         <div class="row">
             <!-- Card -->
-<div class="col-sm-3">
+            <div class="col-sm-3 team-card">
 
-    <div class="view overlay z-depth-2 rounded">
-      <img class="img-fluid w-100" src="img/ba1.jpg"
-        alt="Sample">
-      <a href="#!">
-        <div class="mask rgba-white-slight"></div>
-      </a>
-    </div>
-  
-    <div class="text-center pt-4">
-  
-      <h5>Fantasy T-shirt</h5>
-      <p class="small text-muted text-uppercase mb-2">Shirts</p>
-  
-    </div>
-  
-  </div>
-  <!-- Card -->
-  <!-- Card -->
-<div class="col-sm-3">
+                <div class="view overlay z-depth-2 rounded">
+                    <img class="img-fluid w-100" src="img/ba1.jpg" alt="Sample">
+                    <a href="#!">
+                        <div class="mask rgba-white-slight"></div>
+                    </a>
+                </div>
 
-    <div class="view overlay z-depth-2 rounded">
-      <img class="img-fluid w-100" src="img/ba2.jpg"
-        alt="Sample">
-      <a href="#!">
-        <div class="mask rgba-white-slight"></div>
-      </a>
-    </div>
-  
-    <div class="text-center pt-4">
-  
-      <h5>Fantasy T-shirt</h5>
-      <p class="small text-muted text-uppercase mb-2">Shirts</p>
-  
-    </div>
-  
-  </div>
-  <!-- Card -->
-  <!-- Card -->
-<div class="col-sm-3">
+                <div class="text-center pt-4">
 
-    <div class="view overlay z-depth-2 rounded">
-      <img class="img-fluid w-100" src="img/ba3.jpg"
-        alt="Sample">
-      <a href="#!">
-        <div class="mask rgba-white-slight"></div>
-      </a>
-    </div>
-  
-    <div class="text-center pt-4">
-  
-      <h5>Fantasy T-shirt</h5>
-      <p class="small text-muted text-uppercase mb-2">Shirts</p>
-  
-    </div>
-  
-  </div>
-  <!-- Card -->
-  <!-- Card -->
-<div class="col-sm-3">
+                    <h5>Sarath Shaji</h5>
+                    <p class="small text-muted text-uppercase mb-2">CEO</p>
 
-    <div class="view overlay z-depth-2 rounded">
-      <img class="img-fluid w-100" src="img/ba4.jpg"
-        alt="Sample">
-      <a href="#!">
-        <div class="mask rgba-white-slight"></div>
-      </a>
-    </div>
-  
-    <div class="text-center pt-4">
-  
-      <h5>Fantasy T-shirt</h5>
-      <p class="small text-muted text-uppercase mb-2">Shirts</p>
-  
-    </div>
-  
-  </div>
-  <!-- Card -->
+                </div>
+
+            </div>
+            <!-- Card -->
+            <!-- Card -->
+            <div class="col-sm-3  team-card">
+
+                <div class="view overlay z-depth-2 rounded">
+                    <img class="img-fluid w-100" src="img/ba2.jpg" alt="Sample">
+                    <a href="#!">
+                        <div class="mask rgba-white-slight"></div>
+                    </a>
+                </div>
+
+                <div class="text-center pt-4">
+
+                    <h5>Irene Tennison</h5>
+                    <p class="small text-muted text-uppercase mb-2">CTO</p>
+
+                </div>
+
+            </div>
+            <!-- Card -->
+            <!-- Card -->
+            <div class="col-sm-3 team-card">
+
+                <div class="view overlay z-depth-2 rounded">
+                    <img class="img-fluid w-100" src="img/ba3.jpg" alt="Sample">
+                    <a href="#!">
+                        <div class="mask rgba-white-slight"></div>
+                    </a>
+                </div>
+
+                <div class="text-center pt-4">
+
+                    <h5>Cedric</h5>
+                    <p class="small text-muted text-uppercase mb-2">CFO</p>
+
+                </div>
+
+            </div>
+            <!-- Card -->
+            <!-- Card -->
+            <div class="col-sm-3 team-card">
+
+                <div class="view overlay z-depth-2 rounded">
+                    <img class="img-fluid w-100" src="img/ba4.jpg" alt="Sample">
+                    <a href="#!">
+                        <div class="mask rgba-white-slight"></div>
+                    </a>
+                </div>
+
+                <div class="text-center pt-4">
+
+                    <h5>Arun SK</h5>
+                    <p class="small text-muted text-uppercase mb-2">COO</p>
+
+                </div>
+
+            </div>
+            <!-- Card -->
         </div>
     </section>
     <section class="row " style="overflow: hidden;">
