--- a/agri-product.html
+++ b/agri-product.html
@@ -32,11 +32,11 @@
         <nav class="navbar navbar-1 navbar-expand-lg navbar-light fixed-top">
             <div class="container">
                 <a class="navbar-brand" href="index.html">
-                    <div class="logo">
+                    <div>
                         <img class="logo" src="img/agri_logo1.png">
                     </div>
                 </a>
-                <button class="navbar-toggler"  type="button" data-toggle="collapse"
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent-4" aria-controls="navbarSupportedContent-4"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -80,115 +80,86 @@
         <!--/.Navbar -->
     </section>
     <section id="head">
-        <div class="row py-5">
+        <div class="row py-3">
             <h1 class="mx-auto agri-head">Agricultural Products</h1>
         </div>
     </section>
     <section id="product-section">
         <div class="container">
-            <div class="row mx-auto card-set">
-                <div class="col-sm-5 mb-3 prod-card mx-auto shadow">
-                    <div class="row">
-                        <div class="col-sm-6 prod-detail ">
-                            <img class="prod-image" src="img/tomato.png">
+                <div class="col-sm-9 mx-auto">
+                    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img class="d-block w-100"
+                                    src="img/ag1.jpg" alt="First slide">
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block w-100"
+                                    src="img/ag3.jpg" alt="Second slide">
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block w-100"
+                                    src="img/ag4.jpg" alt="Third slide">
+                            </div>
                         </div>
-                        <div class="col-sm-6 prod-detail">
-                            <h3>Tomato</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit
-                            </p>
-                            <button class="btn success" style="background-color: #78b122;border-radius: 20px;">Add to cart</button>
-                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
                     </div>
                 </div>
-                <div class="col-sm-5 mb-3 prod-card mx-auto">
-                    <div class="row">
-                        <div class="col-sm-6 prod-detail ">
-                            <img class="prod-image" src="img/tomato.png">
-                        </div>
-                        <div class="col-sm-6 prod-detail">
-                            <h3>Tomato</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit
-                            </p>
-                            <button class="btn success" style="background-color: #78b122;border-radius: 20px;">Add to cart</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-5 mb-3 prod-card mx-auto">
-                    <div class="row">
-                        <div class="col-sm-6 prod-detail ">
-                            <img class="prod-image" src="img/tomato.png">
-                        </div>
-                        <div class="col-sm-6 prod-detail">
-                            <h3>Tomato</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit
-                            </p>
-                            <button class="btn success" style="background-color: #78b122;border-radius: 20px;">Add to cart</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-5 mb3 prod-card mx-auto">
-                    <div class="row">
-                        <div class="col-sm-6 prod-detail ">
-                            <img class="prod-image" src="img/tomato.png">
-                        </div>
-                        <div class="col-sm-6 prod-detail">
-                            <h3>Tomato</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit
-                            </p>
-                            <button class="btn success" style="background-color: #78b122;border-radius: 20px;">Add to cart</button>
-                        </div>
-                    </div>
-                </div>
+                <div class="col-sm-8 z-depth-1-half mx-auto mt-5 mr-5 ml-5">
+                    <p class="p-sm-5 p-3"> Agrivator provides fresh and safe to eat vegetables and fruits from 'farm to fork'. The produce
+                        is sourced from clusters of farms under Agrivator across Kerala.</p>
                 </div>
             </div>
-
-        </div>
     </section>
     <div class="footer" style="position: relative; top: 50px; width: 100%;overflow: hidden;">
         <footer class="text-center mb-5">
-          <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
-            <i class="fas fa-angle-up"></i> </a><br><br>
-          <p> <a href="team.html" data-toggle="tooltip" title="Visit team page">Team</a></p>
-          <p><a href="product.html" data-toggle="tooltip" title="Visit products page">Products </a></p>
-          <p><a href="services.html" data-toggle="tooltip" title="Visit services page">Services </a></p>
-          <p> <a href="vision.html" data-toggle="tooltip" title="Visit vision page">Vision</a></p>
-          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    
-          <!-- Social buttons -->
-          <ul class="list-unstyled list-inline text-center">
-            <li class="list-inline-item">
-              <a class="btn-floating btn-fb mx-1">
-                <i class="fab fa-facebook-f"> </i>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a class="btn-floating btn-tw mx-1">
-                <i class="fab fa-twitter"> </i>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a class="btn-floating btn-gplus mx-1">
-                <i class="fab fa-google-plus-g"> </i>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a class="btn-floating btn-li mx-1">
-                <i class="fab fa-linkedin-in"> </i>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a class="btn-floating btn-dribbble mx-1">
-                <i class="fab fa-dribbble"> </i>
-              </a>
-            </li>
-          </ul>
-          <!-- Social buttons -->
+            <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
+                <i class="fas fa-angle-up"></i> </a><br><br>
+            <p> <a href="team.html" data-toggle="tooltip" title="Visit team page">Team</a></p>
+            <p><a href="product.html" data-toggle="tooltip" title="Visit products page">Products </a></p>
+            <p><a href="services.html" data-toggle="tooltip" title="Visit services page">Services </a></p>
+            <p> <a href="vision.html" data-toggle="tooltip" title="Visit vision page">Vision</a></p>
+            <link rel="stylesheet"
+                href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+            <!-- Social buttons -->
+            <ul class="list-unstyled list-inline text-center">
+                <li class="list-inline-item">
+                    <a class="btn-floating btn-fb mx-1">
+                        <i class="fab fa-facebook-f"> </i>
+                    </a>
+                </li>
+                <li class="list-inline-item">
+                    <a class="btn-floating btn-tw mx-1">
+                        <i class="fab fa-twitter"> </i>
+                    </a>
+                </li>
+                <li class="list-inline-item">
+                    <a class="btn-floating btn-gplus mx-1">
+                        <i class="fab fa-google-plus-g"> </i>
+                    </a>
+                </li>
+                <li class="list-inline-item">
+                    <a class="btn-floating btn-li mx-1">
+                        <i class="fab fa-linkedin-in"> </i>
+                    </a>
+                </li>
+                <li class="list-inline-item">
+                    <a class="btn-floating btn-dribbble mx-1">
+                        <i class="fab fa-dribbble"> </i>
+                    </a>
+                </li>
+            </ul>
+            <!-- Social buttons -->
         </footer>
-        </div>
+    </div>
     <!-- End your project here-->
     <!-- Development version -->
     <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.js"></script>
