--- a/growbags.html
+++ b/growbags.html
@@ -93,11 +93,10 @@
                             <img class="prod-image" src="img/gbag.png">
                         </div>
                         <div class="col-sm-6 prod-detail" style="color: #2f2e41;">
-                            <h3>Product-1</h3>
-                            <p>
+                            <h3 class="mb-3">Product-2</h3>
+                            <p class="mt-3">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit
                             </p>
-                            <button class="btn success" style="background-color: #78b122;border-radius: 20px;">Add to cart</button>
                         </div>
                     </div>
                 </div>
@@ -107,39 +106,10 @@
                             <img class="prod-image" src="img/gbag.png">
                         </div>
                         <div class="col-sm-6 prod-detail"  style="color: #2f2e41;">
-                            <h3>Product-2</h3>
-                            <p>
+                            <h3 class="mb-3">Product-2</h3>
+                            <p class="mt-3">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit
                             </p>
-                            <button class="btn success" style="background-color: #78b122;border-radius: 20px;">Add to cart</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-5 mb-3 prod-card mx-auto shadow">
-                    <div class="row">
-                        <div class="col-sm-6 prod-detail ">
-                            <img class="prod-image" src="img/gbag.png">
-                        </div>
-                        <div class="col-sm-6 prod-detail"  style="color: #2f2e41;">
-                            <h3>Product-3</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit
-                            </p>
-                            <button class="btn success" style="background-color: #78b122;border-radius: 20px;">Add to cart</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-5 mb3 prod-card mx-auto shadow">
-                    <div class="row">
-                        <div class="col-sm-6 prod-detail ">
-                            <img class="prod-image" src="img/gbag.png">
-                        </div>
-                        <div class="col-sm-6 prod-detail" style="color: #2f2e41;">
-                            <h3>Product-4</h3>
-                            <p style="color: #2f2e41;">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit
-                            </p>
-                            <button class="btn success" style="background-color: #78b122;border-radius: 20px;">Add to cart</button>
                         </div>
                     </div>
                 </div>
