--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="bootstrap-3.3.3-dist/css/bootstrap-responsive.css">
 </head>
 
-<body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60" style="">
+<body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60" style="font-family: -apple-system, BlinkMacSystemFont, sans-serif;">
 
 
   <div class="jumbotron text-center">
@@ -64,10 +64,10 @@
       </div>
     </div>
   </div>
-  <div class="container-fluids center">
+  <!-- <div class="container-fluids center">
     <div class="row center">
-      <div class="center-block">
-        <div class="col-sm-6 center">
+      <div class="center-block"> -->
+        <!-- <div class="col-sm-6 center">
           <div class="panel panel-default text-center">
             <div class="panel-heading">
               <h1>Need help ?</h1>
@@ -83,8 +83,8 @@
               <button class="btn btn-lg">Write</button>
             </div>
           </div>
-        </div>
-        <div class="col-sm-6 center">
+        </div> -->
+        <!-- <div class="col-sm-6 center">
           <div class="panel panel-default text-center">
             <div class="panel-heading">
               <h1>Any Reviews ?</h1>
@@ -100,10 +100,10 @@
               <button class="btn btn-lg">Review</button>
             </div>
           </div>
-        </div>
-      </div>
+        </div> -->
+      <!-- </div>
     </div>
-  </div>
+  </div> -->
 
 
   <div class="review">
