--- a/vision.html
+++ b/vision.html
@@ -81,7 +81,7 @@
     </div>
     <div class="row">
       <div class="left col m-1 mt-3 mb-5 mx-auto mt-sm-3">
-        <p class=" h4-responsive" style="font-weight: 400;margin-top: auto;margin-bottom: auto;text-align: justify;padding: 10px;">
+        <p class="left-text h4-responsive" style="font-weight: 400;margin-top: auto;margin-bottom: auto;text-align: justify;padding: 10px;">
           We endeavour to infuse technology with agriculture to bring out a revolutionary change through product
           development which can ramp up crop growth and harvest with minimal resources and capital . We want society to
           dine with quality produce rich in nutrients and get rid of pesticides and other life threatening chemicals
