tweaked services and product pages

--- a/services.html
+++ b/services.html
@@ -11,7 +11,7 @@
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
   <!-- Google Fonts Roboto -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
   <!-- Bootstrap core CSS -->
@@ -33,7 +33,7 @@
       <div class="container">
         <a class="navbar-brand" href="index.html">
           <div>
-            <img class="logo" src="img/Logo with Side Text - White.png"></div>
+            <img class="logo" src="img/Logo with Side Text - White.png" style="width: 180px;"></div>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-4"
           aria-controls="navbarSupportedContent-4" aria-expanded="false" aria-label="Toggle navigation">
@@ -81,32 +81,23 @@
   <div class="total container mx-auto pt-5">
     <!-- News jumbotron -->
     <div class="jumbotron text-center hoverable p-4 mt-5">
-
       <!-- Grid row -->
       <div class="row">
-
-
-
         <!-- Grid column -->
         <div class="col-md-7 text-md-left ml-3 mt-3">
-
           <!-- Excerpt -->
           <!-- <a href="#!" class="green-text">
         <h6 class="h6 pb-1"><i class="fas fa-desktop pr-1"></i> Work</h6>
       </a> -->
-
           <h2 class=" mb-4 text-center">About Service</h2>
 
           <p class="font-weight-normal " style="padding:20px;">Lorem Ipsum is simply dummy text of the printing and
             typesetting industry. Lorem
             Ipsum has been the industry's standard dummypx text ever since the 1500s, when an unknown printer took a
             galley of type and scrambled it to make a type specimen book.
-
           </p>
           <!-- <p class="font-weight-normal">by <a><strong>Carine Fox</strong></a>, 19/08/2016</p> -->
-
           <!-- <a class="btn btn-success">Read more</a> -->
-
         </div>
         <!-- Grid column -->
         <!-- Grid column -->
@@ -123,10 +114,8 @@
 
         </div>
         <!-- Grid column -->
-
       </div>
       <!-- Grid row -->
-
     </div>
     <h1 class="m-5 text-center">Services</h1>
     <!-- News jumbotron -->
