--- a/vision.html
+++ b/vision.html
@@ -77,7 +77,7 @@
   </section>
   <section class="container">
     <div class="row">
-      <h1 class="title display-4 mt-3 mx-auto">Vision</h1>
+      <h1 class="font-weight-bold mt-3 mx-auto text-dark">Vision</h1>
     </div>
     <div class="row">
       <div class="left col m-1 mt-3 mb-5 mx-auto mt-sm-3">
