--- a/product.html
+++ b/product.html
@@ -24,16 +24,16 @@
   <link href="//db.onlinewebfonts.com/c/1c45e28f8e86cc89876f003b953cc3e9?family=SF+Pro+Text" rel="stylesheet" type="text/css"/>
 </head>
 
-<body style="overflow: hidden;font-family: -apple-system, BlinkMacSystemFont, sans-serif;">
+<body style="overflow: hidden;">
 
   <!-- Start your project here-->
-  <section id="nav-1">
+  <section class="pb-5">
     <!--Navbar -->
     <nav class="navbar navbar-1 navbar-expand-lg navbar-light fixed-top">
       <div class="container">
         <a class="navbar-brand" href="index.html">
           <div>
-            <img class="logo" src="img/Logo with Side Text - White.png"></div>
+            <img class="logo" src="img/Logo with Side Text - White.png" style="width: 180px;"></div>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-4"
           aria-controls="navbarSupportedContent-4" aria-expanded="false" aria-label="Toggle navigation">
@@ -77,96 +77,94 @@
     </nav>
     <!--/.Navbar -->
   </section>
-  <section id="sec-agri" class="mt-5 container" style="overflow-y: hidden;">
-    <div class="row no-gutters section-title mt-5">
-      <div class="air-desc col-sm-5 mx-auto" style="height: auto;">
-        <p class="air-description row" style="color: #2f2e41;height: auto;">
-          <center><span class=" air-head " style="margin: 0 auto;">AGRICULTURAL PRODUCTS</span></center>
-        </p>
-      </div>
-      <div class="air-image col-sm-5 mx-auto ">
-        <img class="air-image img-fluid" src="img/horticulture_video.jpg">
-      </div>
-    </div>
-    <div class="section-description m-5 col-sm-8 mx-auto ">
-      <p class="mx-auto" style="text-align:justify;font-weight: 300;">
+  <section class="container" style="overflow-y: hidden;">
+    <div class="jumbotron text-center p-4 mt-5"> 
+    <div class="row">
+      <div class="col-md-7 text-md-left ml-3 mt-5">
+        <h1 class="mb-4 text-center font-weight-bold">Agricultural Products</h1>
+        <p class="font-weight-normal" style="padding: 20px;">
         Agrivator provides fresh and safe to eat vegetables and fruits from 'farm to fork'. The produce is sourced from
         clusters of farms under Agrivator across Kerala.
-      </p>
+        </p>
+      </div>
+      <div class="col-md-4 offset-md-1 mx-3 my-3 ">
+        <div class="view overlay">
+        <img class="img-fluid" src="img/horticulture_video.jpg">
+      </div>
+      </div>
     </div>
     <div class="section-button mx-auto">
       <p class="text-center">
         <a href="agri-product.html">
           <button type="button" class="btn section-button"
-            style="background-color: #78b122;border-radius: 50px;color: #2f2e41;">More Products</button>
+            style="background-color: #78b122;border-radius: 50px;color: white;">More Products</button>
         </a>
       </p>
     </div>
     <hr class="mt-3 mb-3">
-
+  </div>
   </section>
-  <section id="sec-agri" class="mt-3 container">
-    <div class="row no-gutters section-title">
-      <div class="air-desc col-sm-5 mx-auto" style="height: auto;">
-        <p class="air-description row" style="color: #2f2e41;height: auto;">
-          <center>
-            <span class=" air-head" style="text-align: center;">Airfarms</span>
-          </center>
+  <section class="container" style="overflow-y: hidden;">
+    <div class="jumbotron text-center p-4 mt-5"> 
+    <div class="row">
+      <div class="col-md-7 text-md-left ml-3 mt-5">
+        <h1 class="mb-4 text-center font-weight-bold">Airfarms</h1>
+        <p class="font-weight-normal" style="padding: 20px;">
+          Agrivator uses fully automated Aeroponic systems in our Airfarms to grow
+           crops efficiently. It is a soil less method of cultivation where plant roots 
+           are suspended in the air and nutrients are directly sprayed by a pump at regular intervals. Also this portable system, where a single tower can hold upto 32 plants requires only limited space & could easily be set up in your home and Agrivator would do it for you. 
         </p>
       </div>
-      <div class="air-image col-sm-5 " style="width: auto;height: auto;">
-        <center><img class="air-image img-fluid" src="img/air.jpg"></center>
+      <div class="col-md-4 offset-md-1 mx-3 my-3 ">
+        <div class="view overlay">
+        <img class="img-fluid" src="img/air.jpg">
       </div>
-    </div>
-    <div class="section-description m-5 col-sm-8 mx-auto ">
-      <p class="mx-auto" style="text-align:justify;font-weight: 300;">
-        Agrivator uses fully automated Aeroponic systems in our Airfarms to grow crops efficiently. It is a soil less
-        method of cultivation where plant roots are suspended in the air and nutrients are directly sprayed by a pump at
-        regular intervals. Also this portable system, where a single tower can hold upto 32 plants requires only limited
-        space & could easily be set up in your home and Agrivator would do it for you.
-      </p>
+      </div>
     </div>
     <div class="section-button mx-auto">
       <p class="text-center">
-        <a href="air.html">
+        <a href="agri-product.html">
           <button type="button" class="btn section-button"
-            style="background-color: #78b122;border-radius: 50px;color: #2f2e41;">More Products</button>
+            style="background-color: #78b122;border-radius: 50px;color: white;">More Products</button>
         </a>
       </p>
     </div>
     <hr class="mt-3 mb-3">
+  </div>
   </section>
-  <section id="sec-agri" class="container mt-3">
-    <div class="row no-gutters section-title">
-      <div class="air-desc col-sm-6" style="height: auto;">
-        <p class="air-description row" style="color: #2f2e41;height: auto;">
-          <center><span class=" air-head" style="text-align: center;">Growbags</span></center>
+  <section class="container" style="overflow-y: hidden;">
+    <div class="jumbotron text-center p-4 mt-5"> 
+    <div class="row">
+      <div class="col-md-7 text-md-left ml-3 mt-5">
+        <h1 class="mb-4 text-center font-weight-bold">Growbags</h1>
+        <p class="font-weight-normal" style="padding: 20px;">
+          If you are not so keen on employing soil-less farming in the beginning, you could always 
+          start with our big and strong grow bags. In regular pots, the roots of the plants tend to grow 
+          in circles entangling themselves. This leads to oxygenation or water stagnation issues. The roots 
+          become constricted leading to less water and nutrient intake. Grow bags help to alleviate 
+          this issue because as the roots come in contact with the edges of the fabric pot they sense 
+          the drier soil that is exposed to the air. This prevents over growth of roots eliminating girdling roots. 
+          A more fibrous root system allows the plants to take in more nutrients and water. Grow bags regulate temperature 
+          due to their breathable quality. Excess heat is able to escape from all sides of the grow bag. The 
+          other advantages include easy storage and versatility. 
         </p>
       </div>
-      <div class="air-image col-sm-6">
-        <center><img class="air-image img-fluid" src="img/Grow_Bag.png"></center>
+      <div class="col-md-4 offset-md-1 mx-3 my-3 ">
+        <div class="view overlay">
+        <img class="img-fluid" src="img/Grow_Bag.png">
       </div>
-    </div>
-    <div class="section-description m-5 col-sm-8 mx-auto ">
-      <p class="mx-auto" style="text-align:justify;font-weight: 300;">
-        If you are not so keen on employing soil-less farming in the beginning, you could always start with our big and
-        strong grow bags. In regular pots, the roots of the plants tend to grow in circles entangling themselves. This
-        leads to oxygenation or water stagnation issues. The roots become constricted leading to less water and nutrient
-        intake. Grow bags help to alleviate this issue because as the roots come in contact with the edges of the fabric
-        pot they sense the drier soil that is exposed to the air. This prevents over growth of roots eliminating
-        girdling roots. A more fibrous root system allows the plants to take in more nutrients and water. Grow bags
-        regulate temperature due to their breathable quality. Excess heat is able to escape from all sides of the grow
-        bag. The other advantages include easy storage and versatility.
-      </p>
+      </div>
     </div>
     <div class="section-button mx-auto">
       <p class="text-center">
-        <a href="growbags.html">
+        <a href="agri-product.html">
           <button type="button" class="btn section-button"
-            style="background-color: #78b122;border-radius: 50px;color: #2f2e41;">More Products</button>
+            style="background-color: #78b122;border-radius: 50px;color: white;">More Products</button>
         </a>
       </p>
     </div>
+    <hr class="mt-3 mb-3">
+  </div>
   </section>
   <section>
 
