--- a/team.html
+++ b/team.html
@@ -11,7 +11,7 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
     <!-- Google Fonts Roboto -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
     <!-- Bootstrap core CSS -->
@@ -20,21 +20,21 @@
     <link rel="stylesheet" href="css/mdb.min.css">
     <!-- Your custom styles (optional) -->
     <!-- <link rel="stylesheet" href="style.css" type="text/css"> -->
-    <link rel="stylesheet" href="css/product.css" type="text/css">
+    <link rel="stylesheet" href="css/product.css">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 </head>
 
-<body style="height: 100vh;">
-    <section id="nav-1" class="row">
+<body style="overflow: hidden; font-family: sans-serif;">
+    <section class="pb-5">
         <!--Navbar -->
-        <nav class="navbar navbar-1 navbar-expand-lg navbar-light fixed-top " style="border: none;">
+        <nav class="navbar navbar-1 navbar-expand-lg navbar-light fixed-top ">
             <div class="container">
                 <a class="navbar-brand" href="index.html">
                     <div class="logo">
-                        <img class="logo" src="img/Logo with Side Text - White.png">
+                        <img class="logo" src="img/Logo with Side Text - White.png" style="width: 180px;">
                     </div>
                 </a>
                 <button class="navbar-toggler"  type="button" data-toggle="collapse"
@@ -56,7 +56,7 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link m-1" href="product.html" style="color: #78b122;font-weight: 500;">
-                                <p class="m-1">PRODUCT</p>
+                                <p class="m-1">PRODUCTS</p>
                             </a>
                         </li>
                         <li class="nav-item">
